Vol 1 No 3 - First cut complete

--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_all_oklahoma_team.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_all_oklahoma_team.html
@@ -6,50 +6,50 @@
 </HEAD>
 <BODY>
 <CENTER>
-<B><FONT SIZE=5>All-Star State Teams:  Oklahoma</B></FONT>
+<strong><FONT SIZE=5>All-Star State Teams:  Oklahoma</strong></FONT>
 <FONT SIZE=2>submitted by Todd Newville</FONT>
 
-<TABLE>
-<TR>
-<TH>Pos</TH><TH>Player</TH><TH>Birthplace</TH><TH>Notes</TH>
-</TR>
-<TR>
-<TD>1B</TD><TD>Willie Stargell</TD><TD>Earlsboro, OK</TD><TD>PIT/475 HR, 1540 RBI, '79 NL Co-MVP And WS Champ </TD>
-</TR>
-<TR>
-<TD>2B</TD><TD>Johnny Ray</TD><TD>Chouteau, OK</TD><TD>PIT, CAL/.290, 1502 H, Led NL Twice In Doubles</TD>
-</TR>
-<TR>
-<TD>SS</TD><TD>Alvin Dark</TD><TD>Comanche, OK</TD><TD>BOS-N, NY-N, STL-N, CHI-N, PHI-N, MIL-N/.289, 2089 H, '54 WS Champ</TD>
-</TR>
-<TR>
-<TD>3B</TD><TD>Pepper Martin</TD><TD>Temple, OK</TD><TD>STL-N/.298, 1227 H, 2X WS Champ, Original Gas House Gang Member</TD>
-</TR>
-<TR>
-<TD>LF</TD><TD>Lloyd Waner</TD><TD>Harrah, OK</TD><TD>PIT, BOS-N, CIN, PHI-N, BRO/.316, 2459 H, 4X 200 Hits, 20 Triples In '29</TD>
-</TR>
-<TR>
-<TD>CF</TD><TD>Mickey Mantle</TD><TD>Spavinaw, OK</TD><TD>NY-A/536 HR, 1509 RBI, 18 WS HR, 3X MVP, '56 Triple Crown</TD>
-</TR>
-<TR>
-<TD>RF</TD><TD>Paul Waner</TD><TD>Harrah, OK</TD><TD>PIT, BRO, BOS-N, NY-A/.333, 3152 H, 605 Doubles (62 In '32), 8X 200 Hits</TD>
-</TR>
-<TR>
-<TD>C</TD><TD>Johnny Bench</TD><TD>Binger, OK</TD><TD>CIN/389 HR, 1376 RBI, 2X MVP, 2X WS Champ, 10 Gold Gloves</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Allie Reynolds</TD><TD>Bethany, OK</TD><TD>CLE, NY-A/182-107, 3.30 ERA, 7-2 In WS, 6X WS Champ, 2 No-Hitters In '51</TD>
-</TR>
-<TR>
-<TD>LHP</TD><TD>Harry Brecheen</TD><TD>Broken Bow, OK</TD><TD>STL-N, STL-A/133-92, 2.92 ERA, 2X WS Champ, Pitching Coach 14 Years (BAL)</TD>
-</TR>
-<TR>
-<TD>RP</TD><TD>Lindy McDaniel</TD><TD>Hollis, OK</TD><TD>STL-N, CHI-N, SF, NY-A, KC/141-119, 3.45 ERA, 172 Saves</TD>
-</TR>
-<TR>
-<TD>MGR</TD><TD>Alvin Dark</TD><TD>Comanche, OK</TD><TD>994-954, .510 Winning Pct., '62 NL Pennant w/SF, '74 WS Champ w/OAK</TD>
-</TR>
-</TABLE>
+<table>
+<tr>
+<th>Pos</th><th>Player</th><th>Birthplace</th><th>Notes</th>
+</tr>
+<tr>
+<td>1B</td><td>Willie Stargell</td><td>Earlsboro, OK</td><td>PIT/475 HR, 1540 RBI, '79 NL Co-MVP And WS Champ </td>
+</tr>
+<tr>
+<td>2B</td><td>Johnny Ray</td><td>Chouteau, OK</td><td>PIT, CAL/.290, 1502 H, Led NL Twice In Doubles</td>
+</tr>
+<tr>
+<td>SS</td><td>Alvin Dark</td><td>Comanche, OK</td><td>BOS-N, NY-N, STL-N, CHI-N, PHI-N, MIL-N/.289, 2089 H, '54 WS Champ</td>
+</tr>
+<tr>
+<td>3B</td><td>Pepper Martin</td><td>Temple, OK</td><td>STL-N/.298, 1227 H, 2X WS Champ, Original Gas House Gang Member</td>
+</tr>
+<tr>
+<td>LF</td><td>Lloyd Waner</td><td>Harrah, OK</td><td>PIT, BOS-N, CIN, PHI-N, BRO/.316, 2459 H, 4X 200 Hits, 20 Triples In '29</td>
+</tr>
+<tr>
+<td>CF</td><td>Mickey Mantle</td><td>Spavinaw, OK</td><td>NY-A/536 HR, 1509 RBI, 18 WS HR, 3X MVP, '56 Triple Crown</td>
+</tr>
+<tr>
+<td>RF</td><td>Paul Waner</td><td>Harrah, OK</td><td>PIT, BRO, BOS-N, NY-A/.333, 3152 H, 605 Doubles (62 In '32), 8X 200 Hits</td>
+</tr>
+<tr>
+<td>C</td><td>Johnny Bench</td><td>Binger, OK</td><td>CIN/389 HR, 1376 RBI, 2X MVP, 2X WS Champ, 10 Gold Gloves</td>
+</tr>
+<tr>
+<td>RHP</td><td>Allie Reynolds</td><td>Bethany, OK</td><td>CLE, NY-A/182-107, 3.30 ERA, 7-2 In WS, 6X WS Champ, 2 No-Hitters In '51</td>
+</tr>
+<tr>
+<td>LHP</td><td>Harry Brecheen</td><td>Broken Bow, OK</td><td>STL-N, STL-A/133-92, 2.92 ERA, 2X WS Champ, Pitching Coach 14 Years (BAL)</td>
+</tr>
+<tr>
+<td>RP</td><td>Lindy McDaniel</td><td>Hollis, OK</td><td>STL-N, CHI-N, SF, NY-A, KC/141-119, 3.45 ERA, 172 Saves</td>
+</tr>
+<tr>
+<td>MGR</td><td>Alvin Dark</td><td>Comanche, OK</td><td>994-954, .510 Winning Pct., '62 NL Pennant w/SF, '74 WS Champ w/OAK</td>
+</tr>
+</table>
 </CENTER>
 <P>Bench: Bobby Murcer (OF), Dale Mitchell (OF), Joe Carter (OF), Paul Blair (OF), Harland Clift (3B), "Indian" Bob Johnson (OF), Don Demeter (OF), Fred Patek (SS), Bill Russell (SS), Mickey Tettleton (C), Darrell Porter (C), Cal McLish (P), Tom Sturdivant (P).</P>
 <P><FONT SIZE=2>Submit your best All-State baseball team!  Players on the list must have been born in the state of choice and must have played in the major leagues or Negro leagues.</P></FONT>
