--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_cartas_crypto.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_cartas_crypto.html
@@ -12,7 +12,7 @@
 
 
 <CENTER>
-<IMG SRC="images/bi_vol_1_no_4_cartas_crypto.gif">
+<img src="images/bi_vol_1_no_4_cartas_crypto.gif">
 </CENTER>
 
 
