--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_home.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_home.html
@@ -14,45 +14,45 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><a href="bi_vol_1_no_4_cover.html">The Cover</a></B></LI>
+<LI><strong><a href="bi_vol_1_no_4_cover.html">The Cover</a></strong></LI>
 
-<LI><a href="bi_vol_1_no_4_all_oklahoma_team.html"><B>All-Star State Teams:  Oklahoma</a></B>, by Todd Newville</LI>
+<LI><a href="bi_vol_1_no_4_all_oklahoma_team.html"><strong>All-Star State Teams:  Oklahoma</a></strong>, by Todd Newville</LI>
 
-<LI><B><a href="bi_vol_1_no_4_letter_from_publisher.html">Letter from the Publisher</a></B></LI>
+<LI><strong><a href="bi_vol_1_no_4_letter_from_publisher.html">Letter from the Publisher</a></strong></LI>
 
-<LI><B><a href="bi_vol_1_no_4_letters_to_publisher.html">Letters to the Publisher</a></B></LI>
+<LI><strong><a href="bi_vol_1_no_4_letters_to_publisher.html">Letters to the Publisher</a></strong></LI>
 
-<LI><a href="bi_vol_1_no_4_opening_day.html"><B>Opening Day</a></B>, by Karl Jacobsen</LI>
+<LI><a href="bi_vol_1_no_4_opening_day.html"><strong>Opening Day</a></strong>, by Karl Jacobsen</LI>
 
-<LI><a href="bi_vol_1_no_4_ryans_corner.html"><B>Ryan's Corner</B></a>, by Ryan</LI>
+<LI><a href="bi_vol_1_no_4_ryans_corner.html"><strong>Ryan's Corner</strong></a>, by Ryan</LI>
 
-<LI><a href="bi_vol_1_no_4_diamond_madness.html"><B>Diamond Madness #3</a></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_1_no_4_diamond_madness.html"><strong>Diamond Madness #3</a></strong> - a baseball crossword puzzle</LI>
 
-<LI><a href="bi_vol_1_no_4_little_sluggers.html"><B>Little Sluggers</a></B>, by PFC Damian J. McGee</LI>
+<LI><a href="bi_vol_1_no_4_little_sluggers.html"><strong>Little Sluggers</a></strong>, by PFC Damian J. McGee</LI>
 
-<LI><a href="bi_vol_1_no_4_tommy_t.html"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_1_no_4_tommy_t.html"><strong>Tommy T's Baseball Flix Pix</a></strong>, by Tom Tilert</LI>
 
-<LI><a href="bi_vol_1_no_4_ive_done_what_i_can.html"><B>I've Done What I Can</a></B>, by Rick Lopez</LI>
+<LI><a href="bi_vol_1_no_4_ive_done_what_i_can.html"><strong>I've Done What I Can</a></strong>, by Rick Lopez</LI>
 
-<LI><a href="bi_vol_1_no_4_shaking_hands.html"><B>Shaking Hands With The Babe</a></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_1_no_4_shaking_hands.html"><strong>Shaking Hands With The Babe</a></strong>, by Steve A. Maze</LI>
 
-<LI><a href="bi_vol_1_no_4_how_to_become.html"><B>How To Become A Baseball CEO</B></a>, by Tim Darnell</LI>
+<LI><a href="bi_vol_1_no_4_how_to_become.html"><strong>How To Become A Baseball CEO</strong></a>, by Tim Darnell</LI>
 
-<LI><a href="bi_vol_1_no_4_cartas_crypto.html"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_1_no_4_cartas_crypto.html"><strong>Carta's Crypto</a></strong> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><a href="bi_vol_1_no_4_green_ink.html"><B>Green Ink</B></a>, by Leo Gillis</LI>
+<LI><a href="bi_vol_1_no_4_green_ink.html"><strong>Green Ink</strong></a>, by Leo Gillis</LI>
 
-<LI><a href="bi_vol_1_no_4_bunkos_quest.html"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
+<LI><a href="bi_vol_1_no_4_bunkos_quest.html"><strong>Bunko's Quest</strong></a>, by Mike McCann</LI>
 
-<LI><a href="bi_vol_1_no_4_poems.html"><B>Poems</a></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_1_no_4_poems.html"><strong>Poems</a></strong>, by Dan Zamudio</LI>
 
-<LI><a href="bi_vol_1_no_4_limericks.html"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_1_no_4_limericks.html"><strong>Limericks</a></strong>, by Bennett Oberfeld</LI>
 
-<LI><a href="bi_vol_1_no_4_missing_october.html"><B>Missing October</B></a>, by Jess Zielinski</LI>
+<LI><a href="bi_vol_1_no_4_missing_october.html"><strong>Missing October</strong></a>, by Jess Zielinski</LI>
 
-<LI><a href="bi_vol_1_no_4_my_final_high_school_season.html"><B>My Final High School Season</B></a>, by Jason Patzfahl</LI>
+<LI><a href="bi_vol_1_no_4_my_final_high_school_season.html"><strong>My Final High School Season</strong></a>, by Jason Patzfahl</LI>
 
-<LI><a href="bi_vol_1_no_4_puzzle_answers.html"><B>Puzzle Answers</B></a></LI>
+<LI><a href="bi_vol_1_no_4_puzzle_answers.html"><strong>Puzzle Answers</strong></a></LI>
 
 
 
