--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
@@ -42,7 +42,7 @@ So I got the sign on me, cold black ink in my shoulder, a message to no one. Jus
 And the gloves snap off: "That's it, it's done..." I walk quickly to the mirror, eyes wide open, thinking the word "hard-core." And there, etched into me:
 
 <CENTER>
-<IMG SRC="images/bi_vol_1_no_4_free_shoeless_joe.gif">
+<img src="images/bi_vol_1_no_4_free_shoeless_joe.gif">
 </CENTER>
 
 Re-printed with permission from "Baseball and the 10,000 Things."
