--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_little_sluggers.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_little_sluggers.html
@@ -14,7 +14,7 @@ Consolidated Public Affairs Office, USMC
 Okinawa, Japan
 </em>
 
-<B>They may not have a powerful swing, but every Saturday morning these little ones have a ball</B>
+<strong>They may not have a powerful swing, but every Saturday morning these little ones have a ball</strong>
 
 CAMP FOSTER, Okinawa, Japan -- It's not often that you'll see a baseball player run with the bat after getting a hit, sit on a base and dig in the dirt during the middle of a game, or even try desperately to catch bugs while playing an outfield position -- not unless you're watching the Camp Foster PeeWee League.
 
