--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
@@ -12,7 +12,7 @@
 <em>by Jess Zielinski</em>
 
 
-<B><em>OCTOBER IS THE CRUELEST MONTH.</B></em> It brings both the apogee and the end of baseball, ushering in winter's shrinking days, closed-in spaces, puffy coats with collars you can barely see over and the realization that you will get snow stuck in that space between your wrist and your gloves.
+<strong><em>OCTOBER IS THE CRUELEST MONTH.</strong></em> It brings both the apogee and the end of baseball, ushering in winter's shrinking days, closed-in spaces, puffy coats with collars you can barely see over and the realization that you will get snow stuck in that space between your wrist and your gloves.
 
 In our house October was a mixed celebration that depended on one's beliefs. My mother and older sister, who believed that football was divine inspiration, stood firmly on one side. In the opposing camp, my dad and I thought such heathens could not appreciate the elegant holiness of baseball.
 
