--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_puzzle_answers.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_puzzle_answers.html
@@ -13,11 +13,11 @@
 <CENTER>
 <H3>Diamond Madness #3</H3>
 
-<IMG SRC="images/bi_vol_1_no_4_puzzle_answers.gif">
+<img src="images/bi_vol_1_no_4_puzzle_answers.gif">
 <HR>
 <H3>Carta's Crypto</H3>
 
-<IMG SRC="images/bi_vol_1_no_4_puzzle_answers2.gif">
+<img src="images/bi_vol_1_no_4_puzzle_answers2.gif">
 </CENTER>
 
 
