--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
@@ -66,7 +66,7 @@ Annie: "I understand your need to prove to yourself and to the world that you ar
 Terence Mann:  "Whatever happened to your father?"
 Ray:  "He never made it as a ballplayer, so he tried to get his son to make it for him...After a while I wanted to come home, but I didn't know how.  I made it back for the funeral, though."
 
-Shoeless Joe:  "If you build it, <B>he</B> will come."
+Shoeless Joe:  "If you build it, <strong>he</strong> will come."
 Ray:  "Oh my God.  It's my father.  Ease his pain.  Go the distance.  My God.  I'd only seen him years later when he was worn down by life.  Look at him.  He's got his whole life in front of him and I'm not even a glint in his eye.  What do I say to him?"
 Annie:  "Why don't you introduce him to his granddaughter?"
 
