--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cover.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cover.html
@@ -13,7 +13,7 @@
 
 <CENTER>
 <H1>Vol. 2, No. 1 - June 2001</H1>
-<IMG SRC="images/bi_vol_2_no_1_cover.jpg">
+<img src="images/bi_vol_2_no_1_cover.jpg">
 </CENTER>
 
 
