--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
@@ -14,37 +14,37 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><a href="bi_vol_2_no_1_cover.html">The Cover</a></B></LI>
+<LI><strong><a href="bi_vol_2_no_1_cover.html">The Cover</a></strong></LI>
 
-<LI><a href="bi_vol_2_no_1_all_alabama_team.html"><B>All-Star State Teams:  Alabama</a></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_1_all_alabama_team.html"><strong>All-Star State Teams:  Alabama</a></strong>, by Steve A. Maze</LI>
 
-<LI><B><a href="bi_vol_2_no_1_letter_from_publisher.html">Letter from the Publisher</a></B></LI>
+<LI><strong><a href="bi_vol_2_no_1_letter_from_publisher.html">Letter from the Publisher</a></strong></LI>
 
-<LI><a href="bi_vol_2_no_1_cow_pasture.html"><B>Cow Pasture Baseball</a></B>, by Bill Raven</LI>
+<LI><a href="bi_vol_2_no_1_cow_pasture.html"><strong>Cow Pasture Baseball</a></strong>, by Bill Raven</LI>
 
-<LI><a href="bi_vol_2_no_1_kell.html"><B>Catching Up With Kell</a></B>, by Jim Sanders</LI>
+<LI><a href="bi_vol_2_no_1_kell.html"><strong>Catching Up With Kell</a></strong>, by Jim Sanders</LI>
 
-<LI><a href="bi_vol_2_no_1_diamond_madness.html"><B>Diamond Madness #4</a></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_2_no_1_diamond_madness.html"><strong>Diamond Madness #4</a></strong> - a baseball crossword puzzle</LI>
 
-<LI><a href="bi_vol_2_no_1_tarot_1.html"><B>Tarot and Baseball, Part 1</a></B>, by Kerri McEntire</LI>
+<LI><a href="bi_vol_2_no_1_tarot_1.html"><strong>Tarot and Baseball, Part 1</a></strong>, by Kerri McEntire</LI>
 
-<LI><a href="bi_vol_2_no_1_bunkos_quest.html"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
+<LI><a href="bi_vol_2_no_1_bunkos_quest.html"><strong>Bunko's Quest</strong></a>, by Mike McCann</LI>
 
-<LI><a href="bi_vol_2_no_1_tommy_t.html"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_2_no_1_tommy_t.html"><strong>Tommy T's Baseball Flix Pix</a></strong>, by Tom Tilert</LI>
 
-<LI><a href="bi_vol_2_no_1_dervil_burlow.html"><B>Dervil Burlow</a></B>, by Richard Johnson</LI>
+<LI><a href="bi_vol_2_no_1_dervil_burlow.html"><strong>Dervil Burlow</a></strong>, by Richard Johnson</LI>
 
-<LI><a href="bi_vol_2_no_1_field_for_dreams.html"><B>A Field For Dreams</a></B>, by J. K. Richards</LI>
+<LI><a href="bi_vol_2_no_1_field_for_dreams.html"><strong>A Field For Dreams</a></strong>, by J. K. Richards</LI>
 
-<LI><a href="bi_vol_2_no_1_ryans_corner.html"><B>Ryan's Corner</B></a>, by Ryan</LI>
+<LI><a href="bi_vol_2_no_1_ryans_corner.html"><strong>Ryan's Corner</strong></a>, by Ryan</LI>
 
-<LI><a href="bi_vol_2_no_1_life_on_the_road.html"><B>Life On The Road</a></B>, by Frank Priegue</LI>
+<LI><a href="bi_vol_2_no_1_life_on_the_road.html"><strong>Life On The Road</a></strong>, by Frank Priegue</LI>
 
-<LI><a href="bi_vol_2_no_1_cartas_crypto.html"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_2_no_1_cartas_crypto.html"><strong>Carta's Crypto</a></strong> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html"><B>Hungary For The Game</B></a>, by Sam Margolis</LI>
+<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html"><strong>Hungary For The Game</strong></a>, by Sam Margolis</LI>
 
-<LI><a href="bi_vol_2_no_1_puzzle_answers.html"><B>Puzzle Answers</B></a></LI>
+<LI><a href="bi_vol_2_no_1_puzzle_answers.html"><strong>Puzzle Answers</strong></a></LI>
 
 
 
