--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_emphasizing.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_emphasizing.html
@@ -19,11 +19,11 @@ by Dave Quinn
 
 <P>If division records were used the last ten years to decide division winners and wildcard teams, there would have been some major changes in the playoffs. The two tables below show the years that division records would have made a difference in determining division winners and wildcard teams. Table 1 shows years 1995-2000, and Table 2 shows 1990-93. 1994 was not used since there were no playoffs that year.</P>
 
-<B><P ALIGN="CENTER">Table 1: Seasons 1995-2000</P>
-</B><P ALIGN="CENTER"><IMG SRC="images/table1.gif" WIDTH=503 HEIGHT=308></P>
+<strong><P ALIGN="CENTER">Table 1: Seasons 1995-2000</P>
+</strong><P ALIGN="CENTER"><img src="images/table1.gif" WIDTH=503 HEIGHT=308></P>
 
-<B><P ALIGN="CENTER">Table 2: 1990-1993</P>
-</B><P ALIGN="CENTER"><IMG SRC="images/table2.gif" WIDTH=388 HEIGHT=172></P>
+<strong><P ALIGN="CENTER">Table 2: 1990-1993</P>
+</strong><P ALIGN="CENTER"><img src="images/table2.gif" WIDTH=388 HEIGHT=172></P>
 
 <P>Years 1992, 1993, and 1998 are underlined because there was no difference those years. The differences in the other years are shown in italics. Bolded names are teams that tied for the division but made the playoffs based on having a better overall record.</P>
 
