--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_cover.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_cover.html
@@ -13,7 +13,7 @@
 
 <CENTER>
 <H1>Vol. 1, No. 4 - March 2001</H1>
-<IMG SRC="images/bi_vol_1_no_4_cover.jpg">
+<img src="images/bi_vol_1_no_4_cover.jpg">
 </CENTER>
 
 
