--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
@@ -6,41 +6,41 @@
 </HEAD>
 <BODY>
 <CENTER>
-<B><FONT SIZE=5>All-Star State Teams:  Alabama</B></FONT>
+<strong><FONT SIZE=5>All-Star State Teams:  Alabama</strong></FONT>
 <FONT SIZE=2>submitted by Steve A. Maze</FONT>
 
-<TABLE>
-<TR>
-<TH>Pos</TH><TH>Player</TH><TH>Birthplace</TH><TH>Notes</TH>
-</TR>
-<TR>
-<TD>1B</TD><TD>Willie McCovey</TD><TD>Mobile</TD><TD>SF, SD/.270, 521 HR, HOF</TD>
-</TR>
-<TR>
-<TD>2B</TD><TD>Jackie Hayes</TD><TD>Clanton</TD><TD>WSH, CHI-A/.267, .976 lifetime F.A.</TD>
-</TR>
-<TR>
-<TD>SS</TD><TD>Joe Sewell</TD><TD>Titus</TD><TD>CLE, NYY/.312, HOF</TD>
-</TR>
-<TR>
-<TD>3B</TD><TD>Jim Tabor</TD><TD>New Hope</TD><TD>BOS-A, PHI-N/.270, Hit 2 grand slams in one game</TD>
-</TR>
-<TR>
-<TD>LF</TD><TD>Heinie Manush</TD><TD>Tuscumbia</TD><TD>DET, WSH/.330, HOF</TD>
-</TR>
-<TR>
-<TD>CF</TD><TD>Willie Mays</TD><TD>Westfield</TD><TD>NYG, SF, NYM/.302, 660 HR, HOF</TD>
-</TR>
-<TR>
-<TD>RF</TD><TD>Hank Aaron</TD><TD>Mobile</TD><TD>MIL-N, ATL, MIL-A/.305, 755 HR, HOF</TD>
-</TR>
-<TR>
-<TD>C</TD><TD>Rudy York</TD><TD>Ragland</TD><TD>DET, BOS-A/.275, 34 HR in 1943</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Satchel Paige</TD><TD>Mobile</TD><TD>CLE, STL-A/reached Majors at age 42, HOF</TD>
-</TR>
-</TABLE>
+<table>
+<tr>
+<th>Pos</th><th>Player</th><th>Birthplace</th><th>Notes</th>
+</tr>
+<tr>
+<td>1B</td><td>Willie McCovey</td><td>Mobile</td><td>SF, SD/.270, 521 HR, HOF</td>
+</tr>
+<tr>
+<td>2B</td><td>Jackie Hayes</td><td>Clanton</td><td>WSH, CHI-A/.267, .976 lifetime F.A.</td>
+</tr>
+<tr>
+<td>SS</td><td>Joe Sewell</td><td>Titus</td><td>CLE, NYY/.312, HOF</td>
+</tr>
+<tr>
+<td>3B</td><td>Jim Tabor</td><td>New Hope</td><td>BOS-A, PHI-N/.270, Hit 2 grand slams in one game</td>
+</tr>
+<tr>
+<td>LF</td><td>Heinie Manush</td><td>Tuscumbia</td><td>DET, WSH/.330, HOF</td>
+</tr>
+<tr>
+<td>CF</td><td>Willie Mays</td><td>Westfield</td><td>NYG, SF, NYM/.302, 660 HR, HOF</td>
+</tr>
+<tr>
+<td>RF</td><td>Hank Aaron</td><td>Mobile</td><td>MIL-N, ATL, MIL-A/.305, 755 HR, HOF</td>
+</tr>
+<tr>
+<td>C</td><td>Rudy York</td><td>Ragland</td><td>DET, BOS-A/.275, 34 HR in 1943</td>
+</tr>
+<tr>
+<td>RHP</td><td>Satchel Paige</td><td>Mobile</td><td>CLE, STL-A/reached Majors at age 42, HOF</td>
+</tr>
+</table>
 </CENTER>
 <P><FONT SIZE=2>Submit your best All-State baseball team!  Players on the list must have been born in the state of choice and must have played in the major leagues or Negro leagues.</P></FONT>
 
