--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cartas_crypto.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cartas_crypto.html
@@ -12,7 +12,7 @@
 
 
 <CENTER>
-<IMG SRC="images/bi_vol_2_no_1_cartas_crypto.gif">
+<img src="images/bi_vol_2_no_1_cartas_crypto.gif">
 </CENTER>
 
 
