--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
@@ -13,7 +13,7 @@
 <CENTER>
 <H3>Puzzle Answers</H3>
 
-<IMG SRC="images/bi_vol_2_no_1_puzzle_answers.gif">
+<img src="images/bi_vol_2_no_1_puzzle_answers.gif">
 <HR>
 </CENTER>
 
