--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
@@ -6,92 +6,92 @@
 </HEAD>
 <BODY>
 <CENTER>
-<B><FONT SIZE=5>All-Star State Teams:  New York</B></FONT>
+<strong><FONT SIZE=5>All-Star State Teams:  New York</strong></FONT>
 <FONT SIZE=2>submitted by Tommy T.</FONT>
 
-<TABLE>
-<TR>
-<TH>Pos</TH><TH>Player</TH><TH>Birthplace</TH><TH>Notes</TH>
-</TR>
-<TR>
-<TD>1B</TD><TD>Lou Gehrig</TD><TD>New York</TD><TD>NY-A, MVP '27 &'36, 2130 consecutive games, .340 BA, 493 HR, 1990 RBI, BA leader, 3-time HR leader, 1-time hits leader, 2-time 2B leader 1-time 3B leader, 13 consecutive years 100 RBIs, leader RBI 5 times, BB leader 3-times, Triple Crown 1934, 2131 consecutive games played, HOF year he retired</TD>
-</TR>
-<TR>
-<TD>1B</TD><TD>Hank Greenberg</TD><TD>New York</TD><TD>DET-A, PIT-N, MVP '35 &'40, 4-time HR and RBI Leader, .313 BA, HOF</TD>
-</TR>
-<TR>
-<TD>1B</TD><TD>Big Dan Brouthers </TD><TD>Sylvan Lake</TD><TD>BUF-N (others), 5-time BA leader, .342 BA, HOF </TD>
-</TR>
-<TR>
-<TD>2B</TD><TD>Eddie Collins</TD><TD>Millerton</TD><TD>PHI-A, CHI-A, MVP '14, 3-time runs leader, 5-time SB leader, .333 BA, 3313 hits, HOF</TD>
-</TR>
-<TR>
-<TD>2B</TD><TD>Frankie Frisch</TD><TD>Bronx</TD><TD>NY-N, STL-N, MVP '31, 3-time SB leader, 2880 hits</TD>
-</TR>
-<TR>
-<TD>2B</TD><TD>Johnny Evers</TD><TD>Troy</TD><TD>CHI-N, BOS-N, MVP '14, "Tinkers to Evers to Chance"</TD>
-</TR>
-<TR>
-<TD>SS</TD><TD>Phil Rizzuto</TD><TD>New York</TD><TD>NY-A, MVP '50, HOF</TD>
-</TR>
-<TR>
-<TD>SS</TD><TD>Alex Rodriguez</TD><TD>New York</TD><TD>SEA-A, TEX-A, .309 BA, 189 HR, 519 RBI (at age 24)</TD>
-</TR>
-<TR>
-<TD>3B</TD><TD>Rico Petrocelli</TD><TD>Brooklyn</TD><TD>BOS-A, 210 HR, 773 RBI</TD>
-</TR>
-<TR>
-<TD>LF</TD><TD>Carl Yastrzemski</TD><TD>Southampton</TD><TD>BOS-A, Triple Crown, MVP '67, 3-time BA leader, 3419 hits, 452 HR, 1844 RBI, 3308 games played, HOF</TD>
-</TR>
-<TR>
-<TD>CF</TD><TD>Willie Keeler</TD><TD>Brooklyn</TD><TD>NY-N, BAL-N, BRK-N, NY-A, .343 BA, 2-time BA leader, 2945 hits, 3-time hits leader, 495 SB, HOF</TD>
-</TR>
-<TR>
-<TD>RF</TD><TD>Rocky Colavito</TD><TD>New York</TD><TD>CLE-A, DET, A, 374 HRs, 1159 RBI, one-time leader in HRs, RBI and BBs</TD>
-</TR>
-<TR>
-<TD>RF</TD><TD>Tommy Davis</TD><TD>Brooklyn</TD><TD>LA-N  many others, .294 BA, 2-time BA leader</TD>
-</TR>
-<TR>
-<TD>RF</TD><TD>Ken Singleton</TD><TD>New York</TD><TD>MTL-N, BAL-A, .282 BA, 246 HR, 1065 RBI</TD>
-</TR>
-<TR>
-<TD>C</TD><TD>Joe Torre</TD><TD>Brooklyn</TD><TD>MIL-N, ATL-N, STL-N, MVP '71, BA leader, .297 BA, 252 HR, 1182 RBI</TD>
-</TR>
-<TR>
-<TD>C</TD><TD>Moe Berg</TD><TD>New York</TD><TD>"The Catcher is a Spy"</TD>
-</TR>
-<TR>
-<TD>DH</TD><TD>Edgar Martinez</TD><TD>New York</TD><TD>SEA-A, .320 BA, BA leader '92 and '95, 1738 hits, 235 HRs, 925 RBIs</TD>
-</TR>
-<TR>
-<TD>LHP</TD><TD>Warren Spahn</TD><TD>Buffalo</TD><TD>BOS-N, MIL-N, 363 wins, 13-time 20-game winner, Cy Young, 63 ShO, 3.09 ERA, 5243.2 IP, HOF, 2 no-hit games (1 after age 40)</TD>
-</TR>
-<TR>
-<TD>LHP</TD><TD>Whitey Ford</TD><TD>New York</TD><TD>NY-A, 236-106, 2.75 ERA, 2-time 20-game winner, 7 WS categories career leader, WS MVP '61, HOF </TD>
-</TR>
-<TR>
-<TD>LHP</TD><TD>Sandy Koufax</TD><TD>Brooklyn</TD><TD>BRK-N, LA-N, MVP '63, 3-time Cy Young '63, '65, '66, WS MVP '653-time 20-game winner, 5-time ERA leader, 4-time K leader, 4 no-hit games (1 perfect game), Youngest elected HOFer</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Jim Palmer</TD><TD>New York</TD><TD>BAL-A, 3-time Cy Young '73, '75, '76, 5-time gold glove winner, 1 no-hit game, 8-time 20-game winner, 2-time ERA leader, 268 wins, 2.86 ERA, HOF</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Waite Hoyte</TD><TD>Brooklyn</TD><TD>NY-A (others), 2-time 20-game winner, save leader, 237 wins 3.59 ERA, HOF</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Old Hoss Radbourne</TD><TD>Rochester</TD><TD>PRO-N, BOS-N, 311 wins, 2.67 ERA, 489 CG, 4535.1 IP, 60 and 49 win seasons, HOF</TD>
-</TR>
-<TR>
-<TD>RHP</TD><TD>Mickey Welch</TD><TD>Brooklyn</TD><TD>TRO-N, NY-N, 308 wins, 2.71 ERA, 4802 IP, 44, 39 and 33 win seasons, 3-time K leader, HOF</TD>
-</TR>
-<TR>
-<TD>Relief</TD><TD>El Roy Face</TD><TD>Stephentown</TD><TD>PIT-N, DET-A, MON-N, 3-time save leader, 18-1 season (.947 win %), 3 saves in '60 WS</TD>
-</TR>
-<TR>
-<TD>Manager</TD><TD>John McGraw</TD><TD>Truxton</TD><TD>BAL-N, BAL-A, NY-N, "Little Napolean," 12 pennant winners, 4 WS winners, 4769 games, 2763 wins .586 win %, HOF</TD>
-</TR>
-</TABLE>
+<table>
+<tr>
+<th>Pos</th><th>Player</th><th>Birthplace</th><th>Notes</th>
+</tr>
+<tr>
+<td>1B</td><td>Lou Gehrig</td><td>New York</td><td>NY-A, MVP '27 &'36, 2130 consecutive games, .340 BA, 493 HR, 1990 RBI, BA leader, 3-time HR leader, 1-time hits leader, 2-time 2B leader 1-time 3B leader, 13 consecutive years 100 RBIs, leader RBI 5 times, BB leader 3-times, Triple Crown 1934, 2131 consecutive games played, HOF year he retired</td>
+</tr>
+<tr>
+<td>1B</td><td>Hank Greenberg</td><td>New York</td><td>DET-A, PIT-N, MVP '35 &'40, 4-time HR and RBI Leader, .313 BA, HOF</td>
+</tr>
+<tr>
+<td>1B</td><td>Big Dan Brouthers </td><td>Sylvan Lake</td><td>BUF-N (others), 5-time BA leader, .342 BA, HOF </td>
+</tr>
+<tr>
+<td>2B</td><td>Eddie Collins</td><td>Millerton</td><td>PHI-A, CHI-A, MVP '14, 3-time runs leader, 5-time SB leader, .333 BA, 3313 hits, HOF</td>
+</tr>
+<tr>
+<td>2B</td><td>Frankie Frisch</td><td>Bronx</td><td>NY-N, STL-N, MVP '31, 3-time SB leader, 2880 hits</td>
+</tr>
+<tr>
+<td>2B</td><td>Johnny Evers</td><td>Troy</td><td>CHI-N, BOS-N, MVP '14, "Tinkers to Evers to Chance"</td>
+</tr>
+<tr>
+<td>SS</td><td>Phil Rizzuto</td><td>New York</td><td>NY-A, MVP '50, HOF</td>
+</tr>
+<tr>
+<td>SS</td><td>Alex Rodriguez</td><td>New York</td><td>SEA-A, TEX-A, .309 BA, 189 HR, 519 RBI (at age 24)</td>
+</tr>
+<tr>
+<td>3B</td><td>Rico Petrocelli</td><td>Brooklyn</td><td>BOS-A, 210 HR, 773 RBI</td>
+</tr>
+<tr>
+<td>LF</td><td>Carl Yastrzemski</td><td>Southampton</td><td>BOS-A, Triple Crown, MVP '67, 3-time BA leader, 3419 hits, 452 HR, 1844 RBI, 3308 games played, HOF</td>
+</tr>
+<tr>
+<td>CF</td><td>Willie Keeler</td><td>Brooklyn</td><td>NY-N, BAL-N, BRK-N, NY-A, .343 BA, 2-time BA leader, 2945 hits, 3-time hits leader, 495 SB, HOF</td>
+</tr>
+<tr>
+<td>RF</td><td>Rocky Colavito</td><td>New York</td><td>CLE-A, DET, A, 374 HRs, 1159 RBI, one-time leader in HRs, RBI and BBs</td>
+</tr>
+<tr>
+<td>RF</td><td>Tommy Davis</td><td>Brooklyn</td><td>LA-N  many others, .294 BA, 2-time BA leader</td>
+</tr>
+<tr>
+<td>RF</td><td>Ken Singleton</td><td>New York</td><td>MTL-N, BAL-A, .282 BA, 246 HR, 1065 RBI</td>
+</tr>
+<tr>
+<td>C</td><td>Joe Torre</td><td>Brooklyn</td><td>MIL-N, ATL-N, STL-N, MVP '71, BA leader, .297 BA, 252 HR, 1182 RBI</td>
+</tr>
+<tr>
+<td>C</td><td>Moe Berg</td><td>New York</td><td>"The Catcher is a Spy"</td>
+</tr>
+<tr>
+<td>DH</td><td>Edgar Martinez</td><td>New York</td><td>SEA-A, .320 BA, BA leader '92 and '95, 1738 hits, 235 HRs, 925 RBIs</td>
+</tr>
+<tr>
+<td>LHP</td><td>Warren Spahn</td><td>Buffalo</td><td>BOS-N, MIL-N, 363 wins, 13-time 20-game winner, Cy Young, 63 ShO, 3.09 ERA, 5243.2 IP, HOF, 2 no-hit games (1 after age 40)</td>
+</tr>
+<tr>
+<td>LHP</td><td>Whitey Ford</td><td>New York</td><td>NY-A, 236-106, 2.75 ERA, 2-time 20-game winner, 7 WS categories career leader, WS MVP '61, HOF </td>
+</tr>
+<tr>
+<td>LHP</td><td>Sandy Koufax</td><td>Brooklyn</td><td>BRK-N, LA-N, MVP '63, 3-time Cy Young '63, '65, '66, WS MVP '653-time 20-game winner, 5-time ERA leader, 4-time K leader, 4 no-hit games (1 perfect game), Youngest elected HOFer</td>
+</tr>
+<tr>
+<td>RHP</td><td>Jim Palmer</td><td>New York</td><td>BAL-A, 3-time Cy Young '73, '75, '76, 5-time gold glove winner, 1 no-hit game, 8-time 20-game winner, 2-time ERA leader, 268 wins, 2.86 ERA, HOF</td>
+</tr>
+<tr>
+<td>RHP</td><td>Waite Hoyte</td><td>Brooklyn</td><td>NY-A (others), 2-time 20-game winner, save leader, 237 wins 3.59 ERA, HOF</td>
+</tr>
+<tr>
+<td>RHP</td><td>Old Hoss Radbourne</td><td>Rochester</td><td>PRO-N, BOS-N, 311 wins, 2.67 ERA, 489 CG, 4535.1 IP, 60 and 49 win seasons, HOF</td>
+</tr>
+<tr>
+<td>RHP</td><td>Mickey Welch</td><td>Brooklyn</td><td>TRO-N, NY-N, 308 wins, 2.71 ERA, 4802 IP, 44, 39 and 33 win seasons, 3-time K leader, HOF</td>
+</tr>
+<tr>
+<td>Relief</td><td>El Roy Face</td><td>Stephentown</td><td>PIT-N, DET-A, MON-N, 3-time save leader, 18-1 season (.947 win %), 3 saves in '60 WS</td>
+</tr>
+<tr>
+<td>Manager</td><td>John McGraw</td><td>Truxton</td><td>BAL-N, BAL-A, NY-N, "Little Napolean," 12 pennant winners, 4 WS winners, 4769 games, 2763 wins .586 win %, HOF</td>
+</tr>
+</table>
 </CENTER>
 <P><FONT SIZE=2>Submit your best All-State baseball team!  Players on the list must have been born in the state of choice and must have played in the major leagues or Negro leagues.</P></FONT>
 
