--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
@@ -13,7 +13,7 @@
 
 <CENTER>
 <H1>Vol. 2, No. 2 - September 2001</H1>
-<IMG SRC="images/bi_vol_2_no_2_cover.jpg">
+<img src="images/bi_vol_2_no_2_cover.jpg">
 </CENTER>
 
 
