--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
@@ -14,41 +14,41 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><a href="bi_vol_2_no_2_cover.html">The Cover</a></B></LI>
+<LI><strong><a href="bi_vol_2_no_2_cover.html">The Cover</a></strong></LI>
 
-<LI><a href="bi_vol_2_no_2_all_new_york_team.html"><B>All-Star State Teams:  New York</a></B>, by Tommy T</LI>
+<LI><a href="bi_vol_2_no_2_all_new_york_team.html"><strong>All-Star State Teams:  New York</a></strong>, by Tommy T</LI>
 
-<LI><B><a href="bi_vol_2_no_2_letter_from_publisher.html">Letter from the Publisher</a></B></LI>
+<LI><strong><a href="bi_vol_2_no_2_letter_from_publisher.html">Letter from the Publisher</a></strong></LI>
 
-<LI><a href="bi_vol_2_no_2_opening_day_2000.html"><B>Opening Day 2000</a></B>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_opening_day_2000.html"><strong>Opening Day 2000</a></strong>, by Bill Burns</LI>
 
-<LI><a href="bi_vol_2_no_2_a_fan_of_the_game.html"><B>A Fan of the Game</a></B>, by James P. Roberts</LI>
+<LI><a href="bi_vol_2_no_2_a_fan_of_the_game.html"><strong>A Fan of the Game</a></strong>, by James P. Roberts</LI>
 
-<LI><a href="bi_vol_2_no_2_score_night.html"><B>Score Night</a></B>, by Jane Richard</LI>
+<LI><a href="bi_vol_2_no_2_score_night.html"><strong>Score Night</a></strong>, by Jane Richard</LI>
 
-<LI><a href="bi_vol_2_no_2_the_home_of_the_braves.html"><B>The Home of the Braves</a></B>, by Bruce Marshall</LI>
+<LI><a href="bi_vol_2_no_2_the_home_of_the_braves.html"><strong>The Home of the Braves</a></strong>, by Bruce Marshall</LI>
 
-<LI><a href="bi_vol_2_no_2_cards_and_heroes.html"><B>Cards and Heroes</B></a>, by Tom Waltz</LI>
+<LI><a href="bi_vol_2_no_2_cards_and_heroes.html"><strong>Cards and Heroes</strong></a>, by Tom Waltz</LI>
 
-<LI><a href="bi_vol_2_no_2_poems.html"><B>Poems</a></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_2_no_2_poems.html"><strong>Poems</a></strong>, by Dan Zamudio</LI>
 
-<LI><a href="bi_vol_2_no_2_limericks.html"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_2_no_2_limericks.html"><strong>Limericks</a></strong>, by Bennett Oberfeld</LI>
 
-<LI><a href="bi_vol_2_no_2_gotcha.html"><B>Gotcha!</a></B>, by Tom Batell</LI>
+<LI><a href="bi_vol_2_no_2_gotcha.html"><strong>Gotcha!</a></strong>, by Tom Batell</LI>
 
-<LI><a href="bi_vol_2_no_2_jack_lively.html"><B>Jack Lively</a></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_2_jack_lively.html"><strong>Jack Lively</a></strong>, by Steve A. Maze</LI>
 
-<LI><a href="bi_vol_2_no_2_only_the_ball.html"><B>Only The Ball Was Dead</B></a>, by C. B. Rothwell</LI>
+<LI><a href="bi_vol_2_no_2_only_the_ball.html"><strong>Only The Ball Was Dead</strong></a>, by C. B. Rothwell</LI>
 
-<LI><a href="bi_vol_2_no_2_baseball_time.html"><B>Baseball Time</a></B>, by Cecilia Tan</LI>
+<LI><a href="bi_vol_2_no_2_baseball_time.html"><strong>Baseball Time</a></strong>, by Cecilia Tan</LI>
 
-<LI><a href="bi_vol_2_no_2_emphasizing.html"><B>Emphasizing Division Records</a></B>, by Dave Quinn</LI>
+<LI><a href="bi_vol_2_no_2_emphasizing.html"><strong>Emphasizing Division Records</a></strong>, by Dave Quinn</LI>
 
-<LI><a href="bi_vol_2_no_2_whiffling.html"><B>Whiffling the Summer Away</B></a>, by Robert Nishihara</LI>
+<LI><a href="bi_vol_2_no_2_whiffling.html"><strong>Whiffling the Summer Away</strong></a>, by Robert Nishihara</LI>
 
-<LI><a href="bi_vol_2_no_2_meeting_lefty.html"><B>Meeting Lefty O'Doul</B></a>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_meeting_lefty.html"><strong>Meeting Lefty O'Doul</strong></a>, by Bill Burns</LI>
 
-<LI><a href="bi_vol_2_no_2_game_2.html"><B>Game 2 of the 2000 World Series</B></a>, by Rick Walunas</LI>
+<LI><a href="bi_vol_2_no_2_game_2.html"><strong>Game 2 of the 2000 World Series</strong></a>, by Rick Walunas</LI>
 
 
 
