Vol 1 No 4 - Table of Contents

--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
@@ -13,42 +13,42 @@
 <H3>Table of Contents</H3>
 <HR>
 </CENTER>
-<UL>
-<LI><strong><a href="bi_vol_2_no_1_cover.html">The Cover</a></strong></LI>
+<ul>
+<li><strong><a href="bi_vol_2_no_1_cover.html">The Cover</a></strong></li>
 
-<LI><a href="bi_vol_2_no_1_all_alabama_team.html"><strong>All-Star State Teams:  Alabama</a></strong>, by Steve A. Maze</LI>
+<li><a href="bi_vol_2_no_1_all_alabama_team.html"><strong>All-Star State Teams:  Alabama</a></strong>, by Steve A. Maze</li>
 
-<LI><strong><a href="bi_vol_2_no_1_letter_from_publisher.html">Letter from the Publisher</a></strong></LI>
+<li><strong><a href="bi_vol_2_no_1_letter_from_publisher.html">Letter from the Publisher</a></strong></li>
 
-<LI><a href="bi_vol_2_no_1_cow_pasture.html"><strong>Cow Pasture Baseball</a></strong>, by Bill Raven</LI>
+<li><a href="bi_vol_2_no_1_cow_pasture.html"><strong>Cow Pasture Baseball</a></strong>, by Bill Raven</li>
 
-<LI><a href="bi_vol_2_no_1_kell.html"><strong>Catching Up With Kell</a></strong>, by Jim Sanders</LI>
+<li><a href="bi_vol_2_no_1_kell.html"><strong>Catching Up With Kell</a></strong>, by Jim Sanders</li>
 
-<LI><a href="bi_vol_2_no_1_diamond_madness.html"><strong>Diamond Madness #4</a></strong> - a baseball crossword puzzle</LI>
+<li><a href="bi_vol_2_no_1_diamond_madness.html"><strong>Diamond Madness #4</a></strong> - a baseball crossword puzzle</li>
 
-<LI><a href="bi_vol_2_no_1_tarot_1.html"><strong>Tarot and Baseball, Part 1</a></strong>, by Kerri McEntire</LI>
+<li><a href="bi_vol_2_no_1_tarot_1.html"><strong>Tarot and Baseball, Part 1</a></strong>, by Kerri McEntire</li>
 
-<LI><a href="bi_vol_2_no_1_bunkos_quest.html"><strong>Bunko's Quest</strong></a>, by Mike McCann</LI>
+<li><a href="bi_vol_2_no_1_bunkos_quest.html"><strong>Bunko's Quest</strong></a>, by Mike McCann</li>
 
-<LI><a href="bi_vol_2_no_1_tommy_t.html"><strong>Tommy T's Baseball Flix Pix</a></strong>, by Tom Tilert</LI>
+<li><a href="bi_vol_2_no_1_tommy_t.html"><strong>Tommy T's Baseball Flix Pix</a></strong>, by Tom Tilert</li>
 
-<LI><a href="bi_vol_2_no_1_dervil_burlow.html"><strong>Dervil Burlow</a></strong>, by Richard Johnson</LI>
+<li><a href="bi_vol_2_no_1_dervil_burlow.html"><strong>Dervil Burlow</a></strong>, by Richard Johnson</li>
 
-<LI><a href="bi_vol_2_no_1_field_for_dreams.html"><strong>A Field For Dreams</a></strong>, by J. K. Richards</LI>
+<li><a href="bi_vol_2_no_1_field_for_dreams.html"><strong>A Field For Dreams</a></strong>, by J. K. Richards</li>
 
-<LI><a href="bi_vol_2_no_1_ryans_corner.html"><strong>Ryan's Corner</strong></a>, by Ryan</LI>
+<li><a href="bi_vol_2_no_1_ryans_corner.html"><strong>Ryan's Corner</strong></a>, by Ryan</li>
 
-<LI><a href="bi_vol_2_no_1_life_on_the_road.html"><strong>Life On The Road</a></strong>, by Frank Priegue</LI>
+<li><a href="bi_vol_2_no_1_life_on_the_road.html"><strong>Life On The Road</a></strong>, by Frank Priegue</li>
 
-<LI><a href="bi_vol_2_no_1_cartas_crypto.html"><strong>Carta's Crypto</a></strong> - a baseball-related cryptogram by Kathy Martenot</LI>
+<li><a href="bi_vol_2_no_1_cartas_crypto.html"><strong>Carta's Crypto</a></strong> - a baseball-related cryptogram by Kathy Martenot</li>
 
-<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html"><strong>Hungary For The Game</strong></a>, by Sam Margolis</LI>
+<li><a href="bi_vol_2_no_1_hungary_for_the_game.html"><strong>Hungary For The Game</strong></a>, by Sam Margolis</li>
 
-<LI><a href="bi_vol_2_no_1_puzzle_answers.html"><strong>Puzzle Answers</strong></a></LI>
+<li><a href="bi_vol_2_no_1_puzzle_answers.html"><strong>Puzzle Answers</strong></a></li>
 
 
 
-</UL>
+</ul>
 
 <!--
 <HR>
